# waymo

./: .gitignore  CMakeLists.txt  README.md  configure  flake.nix  package.json  pnpm-lock.yaml  waymo.pc.in
bindings/bash/: waymo.c
bindings/go/: go.mod  waymo-sys.go  waymo.c  waymo.go  waymo.h
bindings/napi/: CMakeLists.txt  index.d.ts  wayscript.cc
bindings/python/: bindings.cc  pyproject.toml
bindings/rust/waymo/: Cargo.toml
bindings/rust/waymo-sys/: Cargo.toml  build.rs
bindings/rust/waymo/src/: event_loop.rs  input.rs  lib.rs  params.rs
include/: event_loop.h
include/waymo/: actions.h  actions_internal.h  btns.h  cmds.h  events.h
src/: winit.c
src/event_loop/: event_loop.c
src/events/: event_loop.c
src/events/cmds/: cmd_helpers.c
src/events/pendings/: pending_actions.c
src/events/queue/: queue.c
src/include/: event_loop.h  waycon.h
src/internal/: winit.h
src/private/: utils.h
src/private/events/: atomic_compat.h  commands.h  event_loop.h  pendings.h  queue.h
src/private/wayland/: waycon.h
src/wayland/: waycon.c
src/wayland/display/: waysplay.c
src/wayland/kbd/: wayboard.c
src/wayland/pointer/: wayter.c
tests/: CMakeLists.txt
tests/pendings/: CMakeLists.txt  test_pendings_basic.c  test_pendings_concurrent.c  test_pendings_stress.c
tests/queue/: CMakeLists.txt  test_queue_basic.c  test_queue_concurrent.c  test_queue_stress.c
